# PORT_BNP

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindGUROBI.cmake
instances/: README.md
instances/large station/: Link input.csv  Node input.csv  Node types.csv
instances/large station/scenario 1/: Operations assignment.csv  Train input.csv  Train types.csv
instances/large station/scenario 2/: Operations assignment.csv  Train input.csv
instances/large station/scenario 3/: Operations assignment.csv  Train input.csv
instances/large station/scenario 4/: Operations assignment.csv  Service input.csv  Train input.csv
instances/large station/scenario 5/: Operations assignment.csv  Train input.csv
instances/medium station/: Link input.csv  Node input.csv  Node types.csv
instances/medium station/scenario 1/: Operations assignment.csv  Train input.csv
instances/medium station/scenario 2/: Operations assignment.csv  Train input.csv
instances/medium station/scenario 3/: Operations assignment.csv  Train input.csv
instances/medium station/scenario 4/: Operations assignment.csv  Service input.csv  Train input.csv
instances/medium station/scenario 5/: Operations assignment.csv  Train input.csv
instances/small station/: Link input.csv  Node input.csv
instances/small station/scenario 1/: Operations assignment.csv  Train input.csv
instances/small station/scenario 2/: Operations assignment.csv  Train input.csv
instances/small station/scenario 3/: Operations assignment.csv  Train input.csv
instances/small station/scenario 4/: Operations assignment.csv  Train input.csv  Train types.csv
instances/small station/scenario 5/: Operations assignment.csv  Train input.csv
instances/variant station/: Link input.csv  Node input.csv  Node types.csv
instances/variant station/scenario 1/: Operations assignment.csv  Train input.csv
instances/variant station/scenario 2/: Operations assignment.csv  Train input.csv
instances/variant station/scenario 3/: Operations assignment.csv  Service input.csv  Train input.csv
instances/variant station/scenario 4/: Operations assignment.csv  Train input.csv
instances/variant station/scenario 5/: Operations assignment.csv  Service input.csv  Train input.csv
python/: visualize_results.py
results/: summary_benchmark.csv
results/dynamics/: dynamics_large_station_sce_1.csv  dynamics_medium_station_sce_1.csv  dynamics_medium_station_sce_2.csv  dynamics_medium_station_sce_3.csv  dynamics_medium_station_sce_4.csv  dynamics_small_station_sce_1.csv  dynamics_small_station_sce_2.csv  dynamics_small_station_sce_3.csv  dynamics_small_station_sce_4.csv  dynamics_small_station_sce_5.csv
results/solutions/: solution_large_station_sce_1.json  solution_medium_station_sce_1.json  solution_medium_station_sce_2.json  solution_medium_station_sce_3.json  solution_medium_station_sce_4.json  solution_small_station_sce_1.json  solution_small_station_sce_2.json  solution_small_station_sce_3.json  solution_small_station_sce_4.json  solution_small_station_sce_5.json
src/: benchmark_B&P.cpp  cli_B&P.cpp  param.h  test_B&P.cpp  test_column_generation.cpp  test_graph_builder.cpp  test_mfab.cpp  test_mfab2.cpp  test_parser.cpp
src/builder/: GraphBuilder.cpp  GraphBuilder.h
src/data/: InstanceData.h  PLink.cpp  PLink.h  PNode.cpp  PNode.h  Service.cpp  Service.h  Train.cpp  Train.h
src/graph/: Arc.cpp  Arc.h  Node.cpp  Node.h  TimeSpaceGraph.cpp  TimeSpaceGraph.h
src/parser/: GraphParser.cpp  GraphParser.h
src/solver/: BPNode.h  BranchAndPriceSolver.cpp  BranchAndPriceSolver.h  Column.h  GlobalStateManager.cpp  GlobalStateManager.h  MFAB2solver.cpp  MFAB2solver.h  MFABSolver.cpp  MFABSolver.h  MasterProblem.cpp  MasterProblem.h  PricingProblem.cpp  PricingProblem.h  SearchTree.cpp  SearchTree.h
